--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -67,7 +67,7 @@
       </div>
       
       <button class="font w-100 btn btn-sm btn-outline-primary fw-bold" type="submit">Login</button><br>
-      <a th:href="@{forgotpass.html}" class="small font fw-bold" style="text-decoration: none;">Forgot Password?</a>
+      <a th:href="@{/forgotpass}" class="small font fw-bold" style="text-decoration: none;">Forgot Password?</a>
     
     </form>
   </main>
