--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -78,6 +78,15 @@ body{
 
 }
 
+.clg-logo{
+
+display: flex;
+flex-direction: row;
+align-items: center;
+
+}
+
+
 .clg-logo > img:nth-child(1){ /* seting up logo and logo-text */
 
     margin-right: 10px;
@@ -230,10 +239,7 @@ body{
 
 .horizontal-nav {
 
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
+    display: block;
 
     height: 50px;
 
@@ -243,7 +249,6 @@ body{
     border: 1px solid #6BB4FC;
     box-shadow: -1px 7px 8px rgba(107, 180, 252, 0.2);
 
-    overflow-x: auto;
     white-space: nowrap;
 
 }
@@ -252,7 +257,9 @@ body{
 
     display: inline-block;
 
-    width: 200px;
+    transform: translateY(12%);
+
+    width: fit-content;
 
     padding: 5px;
 
@@ -274,3 +281,114 @@ body{
 
 }
 
+
+
+            /* Horizontal Nav */
+
+@media only screen and (max-width:600px){
+
+
+.icon{
+
+    height: 18px;
+    width: 18px;
+
+}
+
+.icon-white{
+
+    height: 18px;
+    width: 18px;
+
+}
+
+    /* Logo section */
+
+.logo-section{
+
+    padding: 10px;
+}
+
+
+.clg-logo > img:nth-child(1){
+  
+
+    width: 30px;
+
+}
+
+.clg-logo > img:nth-child(2){
+  
+
+    width: 210px;
+
+}
+
+.bitmis-logo{
+
+   font-size: 0.9rem;
+
+}
+          /* Logo section */
+
+         /* Profile Strip */
+
+
+.profile-strip{
+
+    padding: 10px;
+
+}
+
+          /* Search Bar */
+
+
+
+.search-bar > input{
+    width: 140px;
+    font-size: 13px;
+}
+
+       /* Search Bar */
+
+         /* user Part*/
+
+#user-department{
+
+font-size: 0.7rem;
+
+}
+
+#user-role{
+
+    font-size: 0.6rem;
+    
+    }
+.user-image{
+
+    transform: scale(0.8);
+    margin: 0%;
+
+}
+
+         /* user Part*/
+
+         /*Horizontal nav*/
+
+.horizontal-nav{
+
+    padding-left: 10px;
+    padding-right: 10px;
+
+    overflow-x: auto;
+
+}
+
+.nav-item{
+
+    font-size: 0.9rem;
+
+}
+
+
+}
