--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -3,6 +3,7 @@
 <head th:fragment="headerfiles">
     <title>Home page</title>
     <meta charset="UTF-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" href="../static/css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
@@ -101,7 +102,7 @@
             <img class="icon" src="../static/Assets/down-arrow-blue.svg" alt="">
 
         </div>
-     
+
     </div>
 
                                     <!-- HORIZONTAL-NAV -->
