--- a/src/main/resources/static/css/footer.css
+++ b/src/main/resources/static/css/footer.css
@@ -17,10 +17,12 @@ footer{
 
     height: 60px;
 
+    font-size: 16px;
+
     font-family: Poppins;
     font-style: normal;
 
-    font-size: 16px;
+
     text-transform: capitalize;
 
     color: #FFFFFF;
@@ -29,11 +31,14 @@ footer{
     padding-right: 30px;
 
 
+
+
 }
 
 .footer > *{
 
     margin-right: 20px;
+    width: max-content;
 
 }
 
@@ -52,10 +57,30 @@ footer{
     align-items: center;
     flex-direction: row;
 
+    overflow: visible;
+
 }
 
 .footer-item > img {
 
     margin-right: 10px;
+
+}
+
+@media only screen and (max-width:600px){
+
+
+.footer{
+    font-size: 14px;
+    padding-left: 10px;
+    padding-right: 10px;
+
+    white-space: nowrap;
+
+    overflow-x: auto;
+}
+
+
+
 
 }
