--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -24,7 +24,8 @@
             </div>
     
     
-            <div><img src="../static/Assets/phone.svg" alt="phone no.">
+            <div class="footer-item">
+                <img src="../static/Assets/phone.svg" alt="phone no.">
                 <span>+91 999999999</span>
             </div>
     
