--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -1,11 +1,59 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org"
+<html lang="en" xmlns:th="http://www.thymeleaf.org" 
 	>
-<head>
+<head th:insert="header.html :: headerfiles">
 <meta charset="UTF-8" />
 <title>add user</title>
+<link rel="stylesheet" th:href="@{/css/index.css}">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-	<h1>add user</h1>
+<header th:insert="header.html :: nav"></header>
+	<div class="container adduser-form" >
+		<form class="row g-3">
+		  <div class="col-md-6">
+		    <label for="inputEmail4" class="form-label">Email</label>
+		    <input type="email" class="form-control" id="inputEmail4">
+		  </div>
+		  <div class="col-md-6">
+		    <label for="inputPassword4" class="form-label">Password</label>
+		    <input type="password" class="form-control" id="inputPassword4">
+		  </div>
+		  <div class="col-12">
+		    <label for="inputAddress" class="form-label">Address</label>
+		    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
+		  </div>
+		  <div class="col-12">
+		    <label for="inputAddress2" class="form-label">Address 2</label>
+		    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+		  </div>
+		  <div class="col-md-6">
+		    <label for="inputCity" class="form-label">City</label>
+		    <input type="text" class="form-control" id="inputCity">
+		  </div>
+		  <div class="col-md-4">
+		    <label for="inputState" class="form-label">State</label>
+		    <select id="inputState" class="form-select">
+		      <option selected>Choose...</option>
+		      <option>...</option>
+		    </select>
+		  </div>
+		  <div class="col-md-2">
+		    <label for="inputZip" class="form-label">Zip</label>
+		    <input type="text" class="form-control" id="inputZip">
+		  </div>
+		  <div class="col-12">
+		    <div class="form-check">
+		      <input class="form-check-input" type="checkbox" id="gridCheck">
+		      <label class="form-check-label" for="gridCheck">
+		        Check me out
+		      </label>
+		    </div>
+		  </div>
+		  <div class="col-12">
+		    <button type="submit" class="btn btn-primary">Add User</button>
+		  </div>
+		</form>
+	</div>
 </body>
 </html>
