--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../static/css/index.css">
-    <link rel="stylesheet" href="../static/css/footer.css">
-    <title></title>
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/footer.css}">
+    <title th:text="${metaTitle} ? ${metaTitle} : 'default title'"></title>
 </head>
 <body>
     
@@ -19,13 +19,13 @@
             </span>
     
             <div class="footer-item">
-                <img src="../static/Assets/mail.svg" alt="mail">
+                <img th:src="@{/Assets/mail.svg}" alt="mail">
                 <span> bit@support@bitwardha.ac.in </span>
             </div>
     
     
             <div class="footer-item">
-                <img src="../static/Assets/phone.svg" alt="phone no.">
+                <img th:src="@{/Assets/phone.svg}" alt="phone no.">
                 <span>+91 999999999</span>
             </div>
     
