--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head th:fragment="headerfiles">
-    <title>Home page</title>
+    <title th:text="${metaTitle} ? ${metaTitle} : 'default title'"></title>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
@@ -45,7 +45,7 @@
         <div class="search-bar">
 
                 <input type="text" value="" placeholder="Search...">
-                <img class="icon-white" src="../static/Assets/search.svg" alt="icon">
+                <img class="icon-white" th:src="@{/Assets/search.svg}" alt="icon">
 
         </div>
 
@@ -73,10 +73,10 @@
         </div>
 
         <div class="user-image ">
-            <img src="../static/Assets/user.svg" alt="">
+            <img th:src="@{/Assets/user.svg}" alt="">
         </div>
 
-        <img class="icon" src="../static/Assets/down-arrow.svg" alt="icon">
+        <img class="icon" th:src="@{/Assets/down-arrow.svg}" alt="icon">
 
 
     </div>
@@ -93,13 +93,13 @@
 
                                     <!-- HORIZONTAL-NAV -->
                                 
-    <div class="horizontal-nav " th:each=${...}>
+    <div class="horizontal-nav ">
 
         <div class="nav-item">
 
-            <a href="#" th:text=${...} > User Management </a>
+            <a href="#"> User Management </a>
 
-            <img class="icon" src="../static/Assets/down-arrow-blue.svg" alt="">
+            <img class="icon" th:src="@{/Assets/down-arrow-blue.svg}" alt="">
 
         </div>
 
