--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -5,6 +5,8 @@
 <title>Insert title here</title>
 </head>
 <body>
-<h1>admin home</h1>
+<header th:insert="header.html :: nav"></header>
+	<h1>This is admin home page</h1>
+	<div th:insert="footer.html :: footer"></div>
 </body>
 </html>
