--- a/src/main/resources/templates/common/resetpass.html
+++ b/src/main/resources/templates/common/resetpass.html
@@ -52,7 +52,7 @@
             <input type="password" class="form-control fw-bold" id="floating-pass" placeholder="New Password"><br>
             <input type="password" class="form-control fw-bold" id="floating-pass" placeholder="Confirm Password"><br>
             <button class="w-100 btn btn-sm btn-outline-primary button fw-bold" type="submit">
-              <a th:href="@{/admin/adminHome.html}" style="text-decoration: none;">Change Password</a>
+              <a th:href="@{adminHome}" style="text-decoration: none;">Change Password</a>
             </button>
           </div>
          
