--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="headerfiles">
+<head th:fragment="header">
     <title th:text="${metaTitle} ? ${metaTitle} : 'default title'"></title>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
