--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -6,54 +6,194 @@
 <title>add user</title>
 <link rel="stylesheet" th:href="@{/css/index.css}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+<!-- Latest compiled and minified CSS -->
+ <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+
+<!-- ============   Style  ============= -->
+    <style>
+      #form{
+        margin: 0.5% 7%; 
+        padding: 5%; 
+        background-color: #f2f2f2; 
+        font-family: 'Open Sans' , sans-serif;
+        font-weight: 600;
+        color: #000000;
+      }
+
+      form {
+        font-family: Poppins;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 20px;
+        line-height: 190%;
+        letter-spacing: 0.06em;
+        text-transform: capitalize;
+        color: #000000;
+      }
+    </style>
+
 </head>
 <body>
 <header th:insert="header.html :: nav"></header>
-	<div class="container adduser-form" >
-		<form class="row g-3">
-		  <div class="col-md-6">
-		    <label for="inputEmail4" class="form-label">Email</label>
-		    <input type="email" class="form-control" id="inputEmail4">
-		  </div>
-		  <div class="col-md-6">
-		    <label for="inputPassword4" class="form-label">Password</label>
-		    <input type="password" class="form-control" id="inputPassword4">
-		  </div>
-		  <div class="col-12">
-		    <label for="inputAddress" class="form-label">Address</label>
-		    <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-		  </div>
-		  <div class="col-12">
-		    <label for="inputAddress2" class="form-label">Address 2</label>
-		    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-		  </div>
-		  <div class="col-md-6">
-		    <label for="inputCity" class="form-label">City</label>
-		    <input type="text" class="form-control" id="inputCity">
-		  </div>
-		  <div class="col-md-4">
-		    <label for="inputState" class="form-label">State</label>
-		    <select id="inputState" class="form-select">
-		      <option selected>Choose...</option>
-		      <option>...</option>
-		    </select>
-		  </div>
-		  <div class="col-md-2">
-		    <label for="inputZip" class="form-label">Zip</label>
-		    <input type="text" class="form-control" id="inputZip">
-		  </div>
-		  <div class="col-12">
-		    <div class="form-check">
-		      <input class="form-check-input" type="checkbox" id="gridCheck">
-		      <label class="form-check-label" for="gridCheck">
-		        Check me out
-		      </label>
-		    </div>
-		  </div>
-		  <div class="col-12">
-		    <button type="submit" class="btn btn-primary">Add User</button>
-		  </div>
-		</form>
-	</div>
+	<div id="form" >
+    <form >
+      
+      <!-- ============   Name + DOB  ============= -->
+
+    <div class="form-row">
+      <div class="form-group col-md-6">
+          <label for="firstName">Full Name*</label>
+          <input type="text" class="form-control" id="inputTextl4" placeholder="Name" required>
+      </div>
+
+      <div class="form-group col-md-6">
+        <label for="DOB">Date Of Birth*</label>
+        <input type="date"class="form-control" id="inputTextl4" placeholder="DOB" required>
+      </div>
+    </div>
+
+        <!-- ============   Email + Password + Gender + UserID  ============= -->
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="inputEmail4">Email*</label>
+            <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="inputPassword4">Password*</label>
+            <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="inputGender4">Gender*</label>
+            <select name="gener" class="form-control" required>
+              <option value="gener">...</option>
+              <option value="Male">Male</option>
+              <option value="Female">Female</option>
+              <option value="Other">Other</option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="UserID">UserID*</label>
+            <input type="text" class="form-control" id="inputTextl4" placeholder="UserID" required>
+          </div>
+    
+        </div>
+
+        <!-- ============   UserType + Address ============= -->
+
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="UserType">UserType*</label>
+            <select name="designation" class="form-control" required>
+              <option value="Type">Select Type</option>
+              <option value="Student">Student</option>
+              <option value="Faculty">Faculty</option>
+            </select>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="inputAddress">Address*</label>
+            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
+         </div>
+        </div>
+
+         <!-- ============   Mobile + Adhar + Pan  ============= -->
+
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="inputNum">Mobile number*</label>
+            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
+        
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputAdhar">Aadhar-Card Number*</label>
+            <input type="text" class="form-control" id="inputAdhar" placeholder="Aadhar Number" required>
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputPan">Pan Number*</label>
+            <input type="text" class="form-control" id="inputPan" placeholder="Pan Number" required>
+          </div>
+        </div>
+
+          <!-- ============   DepartmentID + DOJ + Designation  ============= -->
+
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label>Department ID*</label>
+            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" required>
+        
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputAdhar">Date Of Joining*</label>
+            <input type="date" class="form-control" id="DOJ" required>
+          </div>
+          <div class="form-group col-md-4">
+            <label for="inputPan">Designation*</label>
+            <select name="designation" class="form-control" required>
+              <option value="Student">Student</option>
+              <option value="Staff">Staff</option>
+              <option value="HOD">H.O.D.</option>
+              <option value="Principal">Principal</option>
+            </select>
+          </div>
+        </div>
+
+       
+         <!-- ============   Nationality + Religion + blood-group  ============= -->
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label>Nationality*</label>
+            <input type="text" class="form-control"  placeholder="Nationality" required>
+           </div>
+
+          <div class="form-group col-md-6">
+            <label for="">Religion*</label>
+            <input type="text" class="form-control" placeholder="Religion" required>
+            </div>
+
+            <div class="form-group col-md-6">
+              <label for="inputCategory">Category*</label>
+           <select name="Category" class="form-control" required>
+            <option value="GENERAL">Select Category</option>
+            <option value="SC">SC</option>
+            <option value="ST">ST</option>
+            <option value="NT">NT</option>
+            <option value="OBC">OBC</option>
+            <option value="SBC">SBC</option>
+            <option value="OPEN">OPEN</option>
+          </select>
+          </div>
+
+          <div class="form-group col-md-6">
+            <label for="">Caste*</label>
+            <input type="text" class="form-control" placeholder="Caste" required>
+            </div>
+
+            <div class="form-group col-md-4">
+              <label for="blood-group">blood-group*</label>
+           <select name="blood-group" class="form-control" required>
+            <option value="blood-group">blood-group</option>
+            <option>A Positive</option>
+            <option>A Negative</option>
+            <option>B Positive</option>
+            <option>B Negative</option>
+            <option>AB Positive</option>
+            <option>AB Negative</option>
+            <option>O Positive</option>
+            <option>O Negative</option>
+          </select>
+          </div>
+      </div>
+        
+          <!-- ============   ADD BUTTON  ============= -->
+
+        <button type="submit" class="btn btn-primary">Add User</button>
+
+      </form>
+    </div>
 </body>
 </html>
