--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" 
-	>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" >
 <head th:insert="header.html :: headerfiles">
 <meta charset="UTF-8" />
 <title>add user</title>
@@ -190,7 +189,7 @@
         
           <!-- ============   ADD BUTTON  ============= -->
 
-        <button type="submit" class="btn btn-primary">Add User</button>
+        <button type="submit" class="btn btn-outline-primary">Add User</button>
 
       </form>
     </div>
