--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org>
-<head>
+<head th:insert="header.html :: headerfiles">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -86,6 +86,10 @@ form {
 </style>
 </head>
 <body>
+
+<header th:insert="header.html :: nav"></header>
+
+
    <!---Search bar-->
    <div class="boxContainer mt-5">
        <table class="elementsContainer">
@@ -156,5 +160,9 @@ form {
 
         <!--Submit Button-->
         <button type="submit" class="btn btn-outline-primary">Submit</button>
+        
+<div th:insert="footer.html :: footer"></div>
+        
+        
 </body>
 </html>
