--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html lang:"en" xmlns:th="http://www.thymeleaf.org>
 <head th:insert="header.html :: headerfiles">
     <meta charset="UTF-8">
@@ -112,21 +111,27 @@ form {
         </div><br>
         <div class="row">
             <div class="col-md-10">
-                <table>
+                <table class="table table-striped table-hover">
+                <thead>
                     <tr>
-                        <th>UserID</th>
-                        <th>Email</th>
-                        <th>Name</th>
-                        <th>Mobile Number</th>
-                        <th>Role</th>
+                        <th scope="col">Sr. No.</th>
+                        <th scope="col">UserID</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Mobile Number</th>
+                        <th scope="col">Role</th>
                     </tr>
+                </thead>
+                <tbody>
                     <tr>
+                    	<th scope="row">1</th>
                         <td>123</td>
                         <td>xyz@gmail.com</td>
                         <td>xyz</td>
                         <td>123456789</td>
                         <td>xxx</td>
                     </tr>
+                </tbody>
                 </table>
             </div>
 
