--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -7,6 +7,6 @@
 <body>
 <header th:insert="header.html :: nav"></header>
 	<h1>This is admin home page</h1>
-<footer th:insert="footer.html :: footer"></footer>
+<div th:insert="footer.html :: footer"></div>
 </body>
 </html>
