--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -1,15 +1,18 @@
 <!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" >
-<head th:insert="header.html :: headerfiles">
+<head>
 <meta charset="UTF-8" />
-<title>add user</title>
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Add User</title>
 <link rel="stylesheet" th:href="@{/css/index.css}">
 
 <!-- Latest compiled and minified CSS -->
- <link rel="stylesheet" href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css}" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+ <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
 
-<!-- ============   Style  ============= -->
-    <style>
+<style>
       #form{
         margin: 0.5% 7%; 
         padding: 5%; 
@@ -31,11 +34,12 @@
       }
     </style>
 
-</head>
+
+    </head>
 <body>
-<header th:insert="header.html :: nav"></header>
-	<div id="form" >
-    <form >
+    <header th:insert="header.html :: nav"></header>
+<div id="form">
+    <form>
       
       <!-- ============   Name + DOB  ============= -->
 
@@ -189,7 +193,7 @@
         
           <!-- ============   ADD BUTTON  ============= -->
 
-        <button type="submit" class="btn btn-outline-primary">Add User</button>
+        <button type="submit" class="btn btn-outline-primary float-right">Add User</button>
 
       </form>
     </div>
