--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -34,7 +34,6 @@
       }
     </style>
 
-
     </head>
 <body>
     <header th:insert="header.html :: nav"></header>
@@ -46,12 +45,12 @@
     <div class="form-row">
       <div class="form-group col-md-6">
           <label for="firstName">Full Name*</label>
-          <input type="text" class="form-control" id="inputTextl4" placeholder="Name" required>
+          <input type="text" class="form-control" id="inputTextl4" required>
       </div>
 
       <div class="form-group col-md-6">
         <label for="DOB">Date Of Birth*</label>
-        <input type="date"class="form-control" id="inputTextl4" placeholder="DOB" required>
+        <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required>
       </div>
     </div>
 
@@ -60,12 +59,12 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email*</label>
-            <input type="email" class="form-control" id="inputEmail4" placeholder="Email" required>
+            <input type="email" class="form-control" id="inputEmail4" required>
           </div>
 
           <div class="form-group col-md-6">
             <label for="inputPassword4">Password*</label>
-            <input type="password" class="form-control" id="inputPassword4" placeholder="Password" required>
+            <input type="password" class="form-control" id="inputPassword4" required>
           </div>
 
           <div class="form-group col-md-6">
@@ -80,7 +79,7 @@
 
           <div class="form-group col-md-6">
             <label for="UserID">UserID*</label>
-            <input type="text" class="form-control" id="inputTextl4" placeholder="UserID" required>
+            <input type="text" class="form-control" id="inputTextl4" required>
           </div>
     
         </div>
@@ -108,16 +107,16 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" id="inputNum" placeholder="Mobile number" required>
+            <input type="tel" class="form-control" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" id="inputAdhar" placeholder="Aadhar Number" required>
+            <input type="text" class="form-control" id="inputAdhar" required>
           </div>
           <div class="form-group col-md-4">
             <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" id="inputPan" placeholder="Pan Number" required>
+            <input type="text" class="form-control" id="inputPan" required>
           </div>
         </div>
 
@@ -126,7 +125,7 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label>Department ID*</label>
-            <input type="text" class="form-control" id="inputNum" placeholder="Department ID" required>
+            <input type="text" class="form-control" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
@@ -149,12 +148,12 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Nationality*</label>
-            <input type="text" class="form-control"  placeholder="Nationality" required>
+            <input type="text" class="form-control" required>
            </div>
 
           <div class="form-group col-md-6">
             <label for="">Religion*</label>
-            <input type="text" class="form-control" placeholder="Religion" required>
+            <input type="text" class="form-control" required>
             </div>
 
             <div class="form-group col-md-6">
@@ -172,7 +171,7 @@
 
           <div class="form-group col-md-6">
             <label for="">Caste*</label>
-            <input type="text" class="form-control" placeholder="Caste" required>
+            <input type="text" class="form-control" required>
             </div>
 
             <div class="form-group col-md-4">
