--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link rel="stylesheet" th:href="@{/css/index.css}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+	<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css}" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
 
@@ -95,12 +96,23 @@
                                 
     <div class="horizontal-nav ">
 
-        <div class="nav-item">
+        <!--<div class="nav-item">
 
             <a href="#"> User Management </a>
 
             <img class="icon" th:src="@{/Assets/down-arrow-blue.svg}" alt="">
 
+        </div>-->
+        <div class="dropdown">
+                <button class="btn dropdown-toggle text-primary" href="#" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    User Management</button>
+                
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+    				<li><a class="dropdown-item" href="#">Home</a></li>
+    				<li><a class="dropdown-item" href="#">Add User</a></li>
+    				<li><a class="dropdown-item" href="#">Manage User</a></li>
+    				<li><a class="dropdown-item" href="#">Manage Role</a></li>
+  				</ul>
         </div>
 
     </div>
