--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -103,7 +103,7 @@
 
         </div>-->
         <div class="dropdown">
-                <button class="btn dropdown-toggle text-primary" href="#" id="dropdownMenuButton" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <button class="btn dropdown-toggle text-primary" id="dropdownMenuButton1" type="button" data-toggle="dropdown" aria-expanded="false">
                     User Management</button>
                 
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
