--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -6,7 +6,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add User</title>
 <link rel="stylesheet" th:href="@{/css/index.css}">
-
 <!-- Latest compiled and minified CSS -->
  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -38,19 +37,19 @@
 <body>
     <header th:insert="header.html :: nav"></header>
 <div id="form">
-    <form>
+    <form th:action="@{/admin/do_register}" method="POST" th:object="${user}">
       
       <!-- ============   Name + DOB  ============= -->
 
     <div class="form-row">
       <div class="form-group col-md-6">
           <label for="firstName">Full Name*</label>
-          <input type="text" class="form-control" id="inputTextl4" required>
+          <input type="text" class="form-control" id="inputTextl4" name="user_name" required>
       </div>
 
       <div class="form-group col-md-6">
         <label for="DOB">Date Of Birth*</label>
-        <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required>
+        <input type="date"class="form-control" id="inputTextl4" placeholder="dd/mm/yyyy" required name="dob">
       </div>
     </div>
 
@@ -59,28 +58,28 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email*</label>
-            <input type="email" class="form-control" id="inputEmail4" required>
+            <input type="email" class="form-control" id="inputEmail4" name="email_id" required>
           </div>
 
           <div class="form-group col-md-6">
             <label for="inputPassword4">Password*</label>
-            <input type="password" class="form-control" id="inputPassword4" required>
+            <input type="password" class="form-control" name="password" id="inputPassword4" required>
           </div>
 
           <div class="form-group col-md-6">
             <label for="inputGender4">Gender*</label>
-            <select name="gener" class="form-control" required>
+            <select name="gender" class="form-control" required>
               <option value="gener">...</option>
-              <option value="Male">Male</option>
-              <option value="Female">Female</option>
-              <option value="Other">Other</option>
+              <option value="M">Male</option>
+              <option value="F">Female</option>
+              <option value="O">Other</option>
             </select>
           </div>
 
-          <div class="form-group col-md-6">
+          <!--  <div class="form-group col-md-6">
             <label for="UserID">UserID*</label>
             <input type="text" class="form-control" id="inputTextl4" required>
-          </div>
+          </div> -->
     
         </div>
 
@@ -89,7 +88,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="UserType">UserType*</label>
-            <select name="designation" class="form-control" required>
+            <select name="user_type" class="form-control" required>
               <option value="Type">Select Type</option>
               <option value="Student">Student</option>
               <option value="Faculty">Faculty</option>
@@ -98,7 +97,7 @@
 
           <div class="form-group col-md-6">
             <label for="inputAddress">Address*</label>
-            <input type="text" class="form-control" id="inputAddress" placeholder="Address here ..." required>
+            <input type="text" class="form-control" name="address" id="inputAddress" placeholder="Address here ..." required>
          </div>
         </div>
 
@@ -107,16 +106,16 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" id="inputNum" required>
+            <input type="tel" class="form-control" name="mobile_no" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" id="inputAdhar" required>
+            <input type="text" class="form-control" name="aadhar_card_no" id="inputAdhar" required>
           </div>
           <div class="form-group col-md-4">
             <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" id="inputPan" required>
+            <input type="text" class="form-control" name="pan_card_no" id="inputPan" required>
           </div>
         </div>
 
@@ -125,13 +124,15 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label>Department ID*</label>
-            <input type="text" class="form-control" id="inputNum" required>
+            <input type="text" class="form-control" name="department_id" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Date Of Joining*</label>
-            <input type="date" class="form-control" id="DOJ" required>
+            <input type="date" class="form-control" name="doj" id="DOJ" required>
           </div>
+          
+          <!-- 
           <div class="form-group col-md-4">
             <label for="inputPan">Designation*</label>
             <select name="designation" class="form-control" required>
@@ -144,7 +145,7 @@
         </div>
 
        
-         <!-- ============   Nationality + Religion + blood-group  ============= -->
+        
         <div class="form-row">
           <div class="form-group col-md-6">
             <label>Nationality*</label>
@@ -187,7 +188,7 @@
             <option>O Positive</option>
             <option>O Negative</option>
           </select>
-          </div>
+          </div>  -->
       </div>
         
           <!-- ============   ADD BUTTON  ============= -->
