--- a/src/main/resources/templates/admin/managerole.html
+++ b/src/main/resources/templates/admin/managerole.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang:"en" xmlns:th="http://www.thymeleaf.org>
+<html lang:"en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
     
     <link rel="stylesheet" th:href="@{https://fonts.googleapis.com/icon?family=Material+Icons}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -158,14 +159,16 @@ form {
                               <option value="Revoke">Revoke</option>
                             </select>
                           </div>
+                          
                        </div>
+                      <button type="submit" class="btn btn-outline-primary">Submit</button>  
                 </form>
                 
             </div>
         </div><br>
 
         <!--Submit Button-->
-        <button type="submit" class="btn btn-outline-primary">Submit</button>
+       
         
 <div th:insert="footer.html :: footer"></div>
         
