--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -49,7 +49,7 @@
 </head>
 <body>
 <main class="form">
-    <form>
+    <form th:action="@{signin}" method="POST">
 
       <div class="container jumbotron text-center">
         <img th:src="@{/images/logo.png}" alt="BITW Logo" class="mb-3" style="width: 30%; height: auto;" /><br>
@@ -57,8 +57,8 @@
       </div>
 
       <div class="font">
-        <input type="email" class="form-control fw-bold" id="floatingInput" placeholder="Email Address"><br>
-        <input type="password" class="form-control fw-bold" id="floatingPassword" placeholder="Password">
+        <input type="email" name="username" class="form-control fw-bold" id="floatingInput" placeholder="Email Address"><br>
+        <input type="password" name="password" class="form-control fw-bold" id="floatingPassword" placeholder="Password">
       </div>
       
       <div class="checkbox mb-3">
