--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -14,7 +14,7 @@
 
     
 <!-- LOGO SECTION  -->
-
+	<div class="color-strip"></div>
     <div class="logo-section ">
 
         <div class="clg-logo ">
