--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -44,7 +44,7 @@
     <div class="form-row">
       <div class="form-group col-md-6">
           <label for="firstName">Full Name*</label>
-          <input type="text" class="form-control" id="inputTextl4" name="user_name" required>
+          <input type="text" class="form-control" id="inputTextl4" name="name" required>
       </div>
 
       <div class="form-group col-md-6">
@@ -58,7 +58,7 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="inputEmail4">Email*</label>
-            <input type="email" class="form-control" id="inputEmail4" name="email_id" required>
+            <input type="email" class="form-control" id="inputEmail4" name="email" required>
           </div>
 
           <div class="form-group col-md-6">
@@ -88,10 +88,11 @@
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="UserType">UserType*</label>
-            <select name="user_type" class="form-control" required>
+            <select name="role" class="form-control" required>
               <option value="Type">Select Type</option>
               <option value="Student">Student</option>
-              <option value="Faculty">Faculty</option>
+              <option value="ADMIN">Admin</option>
+              <option value="MANAGEMENT">Management</option>
             </select>
           </div>
 
@@ -106,16 +107,16 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label for="inputNum">Mobile number*</label>
-            <input type="tel" class="form-control" name="mobile_no" id="inputNum" required>
+            <input type="tel" class="form-control" name="mobileNumber" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
             <label for="inputAdhar">Aadhar-Card Number*</label>
-            <input type="text" class="form-control" name="aadhar_card_no" id="inputAdhar" required>
+            <input type="text" class="form-control" name="aadharNumber" id="inputAdhar" required>
           </div>
           <div class="form-group col-md-4">
             <label for="inputPan">Pan Number*</label>
-            <input type="text" class="form-control" name="pan_card_no" id="inputPan" required>
+            <input type="text" class="form-control" name="panNumber" id="inputPan" required>
           </div>
         </div>
 
@@ -124,7 +125,7 @@
         <div class="form-row">
           <div class="form-group col-md-4">
             <label>Department ID*</label>
-            <input type="text" class="form-control" name="department_id" id="inputNum" required>
+            <input type="text" class="form-control" name="deptId" id="inputNum" required>
         
           </div>
           <div class="form-group col-md-4">
