--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,3 +1,5 @@
+
+
 *{
     padding: 0%;
     margin: 0%;
@@ -394,7 +396,7 @@ font-size: 0.7rem;
 
 }
 .strip{
-	background-color:#CFD8DC
+	background-color:#F5F5F5
 }
 .color-strip{
 	background-color:#3949AB;
