--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -5,7 +5,9 @@
     margin: 0%;
     box-sizing: border-box;
 }
-
+.main-area{
+	z-index:-1
+}
 body{
 
     display: block;
@@ -401,4 +403,49 @@ font-size: 0.7rem;
 .color-strip{
 	background-color:#3949AB;
 	min-height:10px
+}
+
+
+
+
+/* profile page css */
+.form-control:focus {
+    box-shadow: none;
+    border-color: #BA68C8
+}
+
+.profile-button {
+    background: rgb(99, 39, 120);
+    box-shadow: none;
+    border: none
+}
+
+.profile-button:hover {
+    background: #682773
+}
+
+.profile-button:focus {
+    background: #682773;
+    box-shadow: none
+}
+
+.profile-button:active {
+    background: #682773;
+    box-shadow: none
+}
+
+.back:hover {
+    color: #682773;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
+}
+
+.add-experience:hover {
+    background: #BA68C8;
+    color: #fff;
+    cursor: pointer;
+    border: solid 1px #BA68C8
 }
