--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -2,12 +2,20 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
   layout:decorator="layouts/default">
 <head th:insert="header.html :: headerfiles">
+<link rel="stylesheet" th:href="@{/css/index.css}">
+<link rel="stylesheet" th:href="@{/css/header.css}">
+<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
 </head>
 <body>
 	<header th:insert="header.html :: nav"></header>
-	<h1>This is home page</h1>
+	<div class="">
+    	
+			<h1>This is home page</h1>
+		
+	</div>
+	
 	<div th:insert="footer.html :: footer"></div>
 </body>
 </html>
