--- a/src/main/resources/templates/common/profile.html
+++ b/src/main/resources/templates/common/profile.html
@@ -1,60 +1,116 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" >
+<html lang="en">
 <head>
-<meta charset="UTF-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Add User</title>
-<link rel="stylesheet" th:href="@{/css/index.css}">
-<link rel="stylesheet" th:href="@{/css/header.css}">
-<!-- Latest compiled and minified CSS -->
- <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<link rel="stylesheet" th:href="@{https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css}">
+    <meta charset="UTF-8">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
+    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    
+    <title>View Profile</title>
+<style>
+   
+
+.form-control:focus {
+    box-shadow: none;
+    border-color: #BA68C8
+}
+
+.profile-button {
+    background: rgb(99, 39, 120);
+    box-shadow: none;
+    border: none
+}
+
+.profile-button:hover {
+    background: #682773
+}
+
+.profile-button:focus {
+    background: #682773;
+    box-shadow: none
+}
+
+.profile-button:active {
+    background: #682773;
+    box-shadow: none
+}
+
+.back:hover {
+    color: #682773;
+    cursor: pointer
+}
+
+.labels {
+    font-size: 11px
+}
+
+.add-experience:hover {
+    background: #BA68C8;
+    color: #fff;
+    cursor: pointer;
+    border: solid 1px #BA68C8
+}
+</style>
 </head>
 <body>
-	<header th:insert="header.html :: nav"></header>
-	<div class="container rounded bg-white mt-5 mb-5">
+<header th:insert="header.html :: nav"></header>
+
+<div class="container rounded bg-white mt-5 mb-5">
     <div class="row">
+        
         <div class="col-md-3 border-right">
             <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">Edogaru</span><span class="text-black-50">edogaru@mail.com.my</span><span> </span></div>
         </div>
-        <div class="col-md-5 border-right">
+        <div class="col-md-9 border-right">
+            
             <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h4 class="text-right">Profile Settings</h4>
-                </div>
+                
                 <div class="row mt-2">
-                    <div class="col-md-6"><label class="labels">Name</label><input type="text" class="form-control" placeholder="first name" value=""></div>
-                    <div class="col-md-6"><label class="labels">Surname</label><input type="text" class="form-control" value="" placeholder="surname"></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-12"><label class="labels">Mobile Number</label><input type="text" class="form-control" placeholder="enter phone number" value=""></div>
-                    <div class="col-md-12"><label class="labels">Address Line 1</label><input type="text" class="form-control" placeholder="enter address line 1" value=""></div>
-                    <div class="col-md-12"><label class="labels">Address Line 2</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                    <div class="col-md-12"><label class="labels">Postcode</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                    <div class="col-md-12"><label class="labels">State</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                    <div class="col-md-12"><label class="labels">Area</label><input type="text" class="form-control" placeholder="enter address line 2" value=""></div>
-                    <div class="col-md-12"><label class="labels">Email ID</label><input type="text" class="form-control" placeholder="enter email id" value=""></div>
-                    <div class="col-md-12"><label class="labels">Education</label><input type="text" class="form-control" placeholder="education" value=""></div>
-                </div>
-                <div class="row mt-3">
-                    <div class="col-md-6"><label class="labels">Country</label><input type="text" class="form-control" placeholder="country" value=""></div>
-                    <div class="col-md-6"><label class="labels">State/Region</label><input type="text" class="form-control" value="" placeholder="state"></div>
+                    <div class="col-md-6"><label class="labels">Full Name</label><label  class="form-control">XYZ</label></div>
+                    <div class="col-md-6"><label class="labels">Email-id</label><label class="form-control" >XYZ@gmail.com</label></div>                   
+                
+                    <div class="col-md-6"><label class="labels">Password</label><label class="form-control">*****</label></div>
+                    <div class="col-md-6"><label class="labels">DOB</label><label class="form-control">11-nov-21</label></div>
+                    <div class="col-md-4"><label class="labels">Gender</label><label class="form-control">Female</label></div>
+                
+                    <div class="col-md-4"><label class="labels">UserID</label><label class="form-control">100</label></div>
+                    <div class="col-md-4"><label class="labels">UserType</label><label class="form-control">Student</label></div>
+                
+                    <div class="col-md-12"><label class="labels">Address</label><label class="form-control">abc colony</label></div>
+                    <div class="col-md-4"><label class="labels">City</label><label class="form-control">Wardha</label></div>
+                    <div class="col-md-4"><label class="labels">State</label><label class="form-control">Maharashtra</label></div>
+                    <div class="col-md-4"><label class="labels">Zip Code</label><label class="form-control">442001</div> <br>
+                    <div class="col-md-6"><label class="labels">Mobile Number</label><label class="form-control">1234567890</label></div>
+                    <div class="col-md-6"><label class="labels">Alternate Number</label><label type="text"  class="form-control">8888899999</label></div>
+                    <div class="col-md-6"><label class="labels">Aadhar Card Number</label><label class="form-control">123456789123</label></div>
+                    <div class="col-md-6"><label class="labels">Pan Number</label><label class="form-control">123456723</label></div>
+                    <div class="col-md-4"><label class="labels">Department Name</label><label class="form-control">123456789123</label></div>
+                    <div class="col-md-4"><label class="labels">Date of joining</label><label class="form-control">11-nov-2021</label></div>
+                    <div class="col-md-4"><label class="labels">Designation</label><label class="form-control">Student</label></div>
+                    <div class="col-md-6"><label class="labels">Nationality</label><label class="form-control">Indian</label></div>
+                    <div class="col-md-6"><label class="labels">Religion</label><label class="form-control">xxx</label></div>
+                    <div class="col-md-6"><label class="labels">Category</label><label class="form-control">xxx</label></div>
+                    <div class="col-md-6"><label class="labels">Caste</label><label class="form-control">xxx</label></div>
+                    <div class="col-md-12"><label class="labels">Blood Group</label><label class="form-control">B+</label></div>
                 </div>
                 
             </div>
         </div>
         <div class="col-md-4">
             <div class="p-3 py-5">
-                <div class="d-flex justify-content-between align-items-center experience"><span>Edit Experience</span><span class="border px-3 p-1 add-experience"><i class="fa fa-plus"></i>&nbsp;Experience</span></div><br>
-                <div class="col-md-12"><label class="labels">Experience in Designing</label><input type="text" class="form-control" placeholder="experience" value=""></div> <br>
-                <div class="col-md-12"><label class="labels">Additional Details</label><input type="text" class="form-control" placeholder="additional details" value=""></div>
+                <div class="row mt-3">
+                
+                </div>
             </div>
         </div>
     </div>
 </div>
-</div>
-</div>
+
+
+<div th:insert="footer.html :: footer"></div>
+
 </body>
 </html>
