--- a/src/main/resources/templates/header.html
+++ b/src/main/resources/templates/header.html
@@ -4,57 +4,74 @@
     <title th:text="${metaTitle} ? ${metaTitle} : 'default title'"></title>
     <meta charset="UTF-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport" />
-    <link rel="stylesheet" th:href="@{/css/header.css}">
+    <link rel="stylesheet" th:href="@{/css/index.css}">
     <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
 
+    <section th:fragment="nav" class="header">
 
-<section th:fragment="nav" class="header">
-<header class="header-area">
-  <!-- site-navbar start -->
-  <div class="navbar-area">
-    <div class="container">
-      <nav class="site-navbar">
-        <!-- site logo -->
-        <a href="#home" class="site-logo">
-        	<img id="clg-logo-png" class="mr-3" th:src="@{/Assets/clg-logo.png}" alt=""> 
-        	<img id="clg-logo-png" class="mr-3 name-clgg" th:src="@{/Assets/logo-name.svg}" alt="">  
-        </a>
+    
+        <!-- LOGO SECTION  -->
+        
+            <div class="logo-section ">
+        
+              <a href="#home">
 
-        <!-- site menu/nav -->
-        <ul>
-          <li><a th:href="@{/home}">home</a></li>
-          <li><a sec:authorize="hasAuthority('ADMIN')" th:href="@{/admin/view-users}">Admin</a></li>
-          <li><a href="#">Principal</a></li>
-          <li><a href="#">HOD</a></li>
-          <li><a sec:authorize="!isAuthenticated()" th:href="@{/signin}">Login</a></li>
-          <li><a sec:authorize="isAuthenticated()" th:href="@{/logout}">Logout</a></li>
-          <li sec:authorize="isAuthenticated()">
-          	<div class="dropdown">
-          	  
-			  <a class="dropbtn"><img alt="" class="profile-icon" th:src="@{/Assets/profile.png}">Dropdown</a>
-			  <div class="dropdown-content">
-			    <a class="drop-link" th:href="@{/profile}">Profile</a>
-			    <a class="drop-link" href="#">Link 2</a>
-			    <a class="drop-link" href="#">Logout</a>
-			  </div>
-			</div>
-          </li>
-        </ul>
 
-        <!-- nav-toggler for mobile version only -->
-        <button class="nav-toggler">
-          <span></span>
-        </button>
-      </nav>
-    </div>
-  </div><!-- navbar-area end -->
+                <div class="clg-logo ">
+        
+                    <img id="clg-logo-png" class="mr-3" th:src="@{/Assets/clg-logo.png}" alt="">
+                    <img th:src="@{/Assets/logo-name-white.svg}" alt="">
+        
+                </div>
 
-  
-</header>
-<script type="text/javascript" th:src="@{/js/header.js}"></script>
-</section>
+              </a>
+
+
+
+            <!-- USER_INFO  -->
+                
+            <div class="profile-part ">
+        
+                <div class="user-info ">
+        
+                        <span id="user-department">
+                                Department
+                        </span>
+        
+                        <span id="user-role">
+                            Professor
+                        </span>
+        
+                </div>
+                
+
+        
+                
+                                  <div class="dropdown" >
+                                    <a class="dropbtn">
+                                      <img id="user-image"  th:src="@{/Assets/profile.svg}" alt="">
+                                      <img  class="icon" id="down-arrow"  th:src="@{/Assets/down-arrow-blue.svg}" alt="icon">
+                                    </a>
+                                    <div class="dropdown-content">
+                                      <a class="drop-link" th:href="@{/profile}">Profile</a>
+                                      <a class="drop-link" href="#">Link 2</a>
+                                      <a class="drop-link" href="#">Logout</a>
+                                    </div>
+                                  </div>
+        
+        
+            </div>
+        
+                <!-- USER_INFO  -->
+        
+            </div>
+        
+        <!-- LOGO SECTION  -->
+        
+        
+        </section>
 
 
 </body>
