Header-footer added

--- a/src/main/resources/templates/admin/addleavebalance.html
+++ b/src/main/resources/templates/admin/addleavebalance.html
@@ -149,8 +149,8 @@
                     </div>
 
                 </div>
-            </div>
-<div th:insert="footer.html :: footer"></div>
+    </div>
+<div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 
 </html>
