--- a/src/main/resources/templates/admin/editUser.html
+++ b/src/main/resources/templates/admin/editUser.html
@@ -196,6 +196,6 @@
 
       </form>
     </div>
-    <div th:insert="footer.html :: footer"></div>
+    <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
