--- a/src/main/resources/templates/admin/viewUsers.html
+++ b/src/main/resources/templates/admin/viewUsers.html
@@ -69,6 +69,6 @@
 		
 		</table>
 	</div>
-	<div th:insert="footer.html :: footer"></div>
+	<div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
