--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -30,7 +30,11 @@
 }
 body{
 
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
     height: 100vh;
     width: 100%;
 
@@ -91,10 +95,24 @@ body{
 header{
 
 background-color:rgb(0, 64, 128) ;
+top: 0px;
+width: 100%;
+position: absolute;
 
 
 }
 
+#footer{
+
+  bottom: 0%;
+  position: absolute;
+  width: 100%;
+
+}
+
+main{
+  position: absolute;
+}
 
         /* Logo Section */
 
