--- a/src/main/resources/templates/admin/adduser.html
+++ b/src/main/resources/templates/admin/adduser.html
@@ -199,6 +199,6 @@
 
       </form>
     </div>
-    <div th:insert="footer.html :: footer"></div>
+    <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
