--- a/src/main/resources/templates/admin/leavehistory.html
+++ b/src/main/resources/templates/admin/leavehistory.html
@@ -89,6 +89,6 @@
         </div>
 
     </div>
-    <div th:insert="footer.html :: footer"></div>
+    <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
