--- a/src/main/resources/templates/admin/manageuser.html
+++ b/src/main/resources/templates/admin/manageuser.html
@@ -181,7 +181,7 @@
                     </tbody>
                 </table>
             </div>
-<div th:insert="footer.html :: footer"></div>
+<div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 
 </html>
