--- a/src/main/resources/templates/common/login.html
+++ b/src/main/resources/templates/common/login.html
@@ -18,6 +18,8 @@
 
  <!-- link css -->
 <link rel="stylesheet" th:href="@{/css/style.css}">
+<link rel="stylesheet" th:href="@{/css/header.css}">
+<link rel="stylesheet" th:href="@{/css/index.css}">
 <link rel="stylesheet" th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css}">
 
 <!-- Google fonts -->
@@ -51,11 +53,11 @@
   </style>
 </head>
 <body>
+  <header th:insert="header.html :: nav"></header>
 <main class="form">
     <form th:action="@{signin}" method="POST" id="login-form">
 
       <div class="container jumbotron text-center">
-        <img th:src="@{/images/logo.png}" alt="BITW Logo" class="mb-3" style="width: 30%; height: auto;" /><br>
         <h3 class="mb-4"><strong>LOGIN</strong></h3>
       </div>
 
@@ -74,5 +76,6 @@
     
     </form>
   </main>
+  <div id="footer" th:insert="footer.html :: footer"></div>
 </body>
 </html>
